2011-08-02  Van Lam  <vanlam@google.com>

        --webkit-visual-word: ctrl-arrow is not able to reach the boundary of line
        https://bugs.webkit.org/show_bug.cgi?id=61346

        Reviewed by Ryosuke Niwa.

        Updated test cases to check for visual word movement to the end-of-line
        position.

        * editing/selection/move-by-word-visually-multi-line-expected.txt:
        * editing/selection/move-by-word-visually-multi-line.html:
        * editing/selection/move-by-word-visually-multi-space-expected.txt:
        * editing/selection/move-by-word-visually-multi-space.html:
        * editing/selection/move-by-word-visually-single-space-inline-element-expected.txt:
        * editing/selection/move-by-word-visually-single-space-inline-element.html:
        * editing/selection/move-by-word-visually-single-space-one-element-expected.txt:
        * editing/selection/move-by-word-visually-single-space-one-element.html:

2011-08-02  Zhenyao Mo  <zmo@google.com>

        Unreviewed, test expectations update, gardener stuff.

        * platform/chromium/test_expectations.txt:

2011-08-02  Jochen Eisinger  <jochen@chromium.org>

        Add a test for FrameLoaderClient::allowPlugins
        https://bugs.webkit.org/show_bug.cgi?id=33991

        Reviewed by Adam Barth.

        * platform/chromium/permissionclient/plugin-permission-expected.txt: Added.
        * platform/chromium/permissionclient/plugin-permission.html: Added.

2011-08-02  Zhenyao Mo  <zmo@google.com>

        Unreviewed, rebaseline, gardener stuff.

        * platform/chromium-win-xp/fast/text/international/bidi-mirror-he-ar-expected.png:
        * platform/chromium-win-xp/fast/text/justify-ideograph-leading-expansion-expected.png:
        * platform/chromium/test_expectations.txt:

2011-08-02  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Remove initator column for JSC, fix network resource initiator tests.
        https://bugs.webkit.org/show_bug.cgi?id=65534
