@@ -12,14 +12,17 @@ body {
     font-size: 16pt;
 }
 </style>
+<script>
+if (window.layoutTestController)
+    layoutTestController.waitUntilDone();
+
+window.onload = function() {
+    document.body.offsetTop;
+    if (window.layoutTestController)
+        setTimeout(function() { layoutTestController.notifyDone(); }, 100);
+}
+</script>
 </head>
 <body style="border:5px solid black;">
 せっかく見つけたすばらしい記事がどこにあったか忘れてしまった経験はありますかならタイトルとアドレスだけでなく、訪問したウェブページのコンテンツからも検索することができます。せっかく見つけたすばらしい記事がどこにあったか忘れてしまった経験はありますか ならタイトルとアドレスだけでなく、訪問したウェブページのコンテンツからも検索することができます。訪問したウェブページのコンテンツからも検索することができます。せっかく見つけたすばらしい記事がどこにあったか忘れてしまった経験はありますか ならタイトルとアドレスだけでなく、訪問
-    <script>
-        if (window.layoutTestController) {
-            layoutTestController.waitUntilDone();
-            document.body.offsetTop;
-            setTimeout(function() { layoutTestController.notifyDone(); }, 100);
-        }
-    </script>
 </body>
